design/basic.ebnf
program         ::= { statement }

statement       ::= assignment ";"
                 | if_statement
                 | function_declaration
                 | return_statement ";"
                 | expression ";"

assignment      ::= identifier "=" expression

if_statement    ::= "if" "(" expression ")" block ["else" block]

function_declaration ::= "function" identifier "(" [parameter_list] ")" block

parameter_list  ::= identifier { "," identifier }

return_statement ::= "return" expression

block           ::= "{" { statement } "}"

expression      ::= logical_or

logical_or      ::= logical_and { "||" logical_and }

logical_and     ::= equality { "&&" equality }

equality        ::= comparison { ("==" | "!=") comparison }

comparison      ::= term { ("<" | "<=" | ">" | ">=") term }

term            ::= factor { ("+" | "-") factor }

factor          ::= unary { ("*" | "/") unary }

unary           ::= ("!" | "-") unary | primary

primary         ::= number
                 | string
                 | boolean
                 | identifier
                 | function_call
                 | "(" expression ")"

function_call   ::= identifier "(" [argument_list] ")"

argument_list   ::= expression { "," expression }

identifier      ::= /[a-zA-Z_][a-zA-Z0-9_]*/
number          ::= /[0-9]+/
string          ::= /"[^"]*"/
boolean         ::= "true" | "false"
